--- a/config.json
+++ b/config.json
@@ -22,5 +22,6 @@
     "namidonate":"https://www.nami.org/get-involved/donate-to-nami/",
     "namiresources":"https://www.nami.org/support-education/",
     "namithumb":"https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxKNDidGEfOupNnMo74G3R7OOclPvxlYokDA&s",
-    "discinv":"https://discord.gg/hyyMnz3enE"
+    "discinv":"https://discord.gg/hyyMnz3enE",
+    "prideplans":""
 }
